# unify

./: CMakeLists.txt  README.md
.circleci/: config.yml
examples/: README.md  unifier-basic.scm  unifier-tree.scm  unifier-w-types.scm  unify-complex-1.scm
lib/: CMakeLists.txt  UnifyConfig.cmake.in
opencog/: CMakeLists.txt
opencog/atoms/: CMakeLists.txt
opencog/atoms/rule/: CMakeLists.txt  RuleLink.cc  RuleLink.h  UnifierLink.cc  UnifierLink.h  UnifyReduceLink.cc
opencog/atoms/scm/: CMakeLists.txt  unify.scm
opencog/atoms/unify/: CMakeLists.txt  UnifierLink.cc  UnifierLink.h  UnifyReduceLink.h
opencog/atoms/unify_types/: unify_types.script  unify_types_init.cc
opencog/scm/: unify.scm
opencog/types/: unify_types_init.cc
opencog/unify/: CMakeLists.txt  Unify.cc  Unify.h  version.h
opencog/unify/atoms/: CMakeLists.txt  UnifierLink.cc  UnifierLink.h  UnifyReduceLink.cc  UnifyReduceLink.h
opencog/unify/types/: CMakeLists.txt  unify_types_init.cc
tests/: CMakeLists.txt
tests/atoms/: CMakeLists.txt  unifier-tree-test.scm
tests/unify/: CMakeLists.txt
tests/unify/atoms/: unifier-tree-test.scm
tests/unify/unifier/: UnifyUTest.cxxtest
